@@ -1,0 +1,13 @@
+language: c
+sudo: required
+before_script:
+  - sudo add-apt-repository main
+  - sudo add-apt-repository universe
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libpcre2-dev g++-7 valgrind
+  - cd ./Release/
+script:
+  - make test
+  - make clean
+  - CFLAGS="-Werror -std=gnu89" make
